--- a/npkpir_23/web/wspolny/sub/faktura/dialog_nowyklient_faktura.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/dialog_nowyklient_faktura.xhtml
@@ -6,32 +6,27 @@
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:ft="http://primefaces.prime.com.tr/facestrace">
 
-    <p:dialog id="dialognowyklientfaktura" header="Dane nowego klienta: ( * - dane fakultatywne)" widgetVar="dialognowyklientfaktura" resizable="false" 
+    <p:dialog id="dialognowyklientfaktura" header="Dane nowego klienta. Dane można zapisać po wypełnieniu wymaganych pól" widgetVar="dialognowyklientfaktura" resizable="false" 
               onShow="ustawdialog('dialognowyklientfaktura','akordeon:formstworz:danekontrahentaout',1150,220);"
               focus=":formnkfaktura:nazwaPole" onHide="resetujdialog('dialognowyklientfaktura');" >
         <h:form id="formnkfaktura" >
             <p:panel style="width: 95%;">
                 <p:growl life="3600"  id="mess_add" />
                 <p:focus id="focus" for="polawprowadzania"  />
-                <p:panelGrid id="polawprowadzania" columns="5" >
-                    <h:outputLabel value="nip/przy osobie fizycznej zostawić puste" style="font-weight: 700"/>
-                    <h:outputLabel value="nazwa pełna" style="font-weight: 700"/>
-                    <h:outputLabel value="nazwa skrocona" style="font-weight: 700"/>
+                <p:panelGrid id="polawprowadzania" columns="4" style="width: 100%;">
+                    <h:outputLabel value="nip/wypełniać tylko gdy klientem jest firma" style="font-weight: 700; color: green;"/>
+                    <h:outputLabel value="nazwa pełna" style="font-weight: 700;width: 300px;"/>
                     <h:outputLabel value="kod pocztowy" style="font-weight: 700"/>
                     <h:outputLabel value="miejscowość" style="font-weight: 700"/>
                     <p:inputText id="nipPole" value="#{KlView.selected.nip}" maxlength="20" style="width: 200px">
-                        <p:watermark for="nipPole" value="bez -" />
+                        <p:watermark for="nipPole" value="NIP firmy - bez myślników." />
                         <p:ajax event="keyup" listener="#{KlView.znajdzdaneregon('formnkfaktura')}" partialSubmit="true" global="false"/>
                     </p:inputText>
-                    <p:inputText id="nazwaPole" value="#{KlView.selected.npelna}"  accesskey="a" title="pełna nazwa kontrahenta" maxlength="55" style="width: 200px" required="true" requiredMessage="Pole nazwy pełnej nie może byc puste"
-                                 onblur="kopiujnazwenowafaktura();" valueChangeListener="#{KlView.wyszukajduplikat}">
-                        <p:watermark for="nazwaPole" value="pełna nazwa kontrahenta 55znakow" /> 
+                    <p:inputText id="nazwaPole" value="#{KlView.selected.npelna}"  accesskey="a" title="pełna nazwa kontrahenta / nazwisko i imię" style="width: 350px" required="true" requiredMessage="Pole nazwy pełnej nie może byc puste"
+                                 valueChangeListener="#{KlView.wyszukajduplikat}">
+                        <p:watermark for="nazwaPole" value="nazwa kontrahenta  / nazwisko i imię" /> 
                         <p:ajax event="blur" global="false" partialSubmit="true"/>
                     </p:inputText>
-                    <p:inputText id="symbolPole" value="#{KlView.selected.nskrocona}" maxlength="25" style="width: 200px" required="true" requiredMessage="Pole nazwa skrocona nie może byc puste">
-                        <p:watermark for="symbolPole" value="hasłowo, np:FORTEX" /> 
-                    </p:inputText>
-                    
                     <p:inputText id="kodPole" value="#{KlView.selected.kodpocztowy}" maxlength="6" style="width: 200px" required="true" 
                                  requiredMessage="Pole kod pocztowy nie może byc puste" />
                     <p:autoComplete id="miejscowoscPole" value="#{KlView.selected.miejscowosc}" completeMethod="#{miasta.complete}"
@@ -43,23 +38,27 @@
                         <p:ajax event="query" global="false"/>
                         <p:ajax event="select" partialSubmit="true" global="false"/>
                     </p:autoComplete>
+                </p:panelGrid>
+                <p:panelGrid id="polawprowadzania2" columns="5"  style="width: 100%;">
                     <h:outputLabel value="ulica" style="font-weight: 700"/>
                     <h:outputLabel value="dom" style="font-weight: 700"/>
                     <h:outputLabel value="lokal" style="font-weight: 700"/>
-                    <h:outputLabel value="kraj*" style="font-weight: 700"/>
-                    <h:outputLabel value="email*" style="font-weight: 700"/>
+                    <h:outputLabel value="kraj" style="font-weight: 700"/>
+                    <h:outputLabel value="email" style="font-weight: 700"/>
                     <p:inputText id="ulicaPole" value="#{KlView.selected.ulica}"   style="width: 200px" required="true" requiredMessage="Pole ulica nie może byc puste"
                                  onblur="wykresllokal_wykazklientow_dialog('formnkfaktura:ulicaPole');"/>
-                    <p:inputText id="domPole" value="#{KlView.selected.dom}" style="width: 200px" required="true" requiredMessage="Pole dom nie może byc puste"/>
+                    <p:inputText id="domPole" value="#{KlView.selected.dom}" style="width: 200px" required="true" requiredMessage="Pole dom nie może byc puste"
+                                 onblur="$('.uibuttonmui').show()"
+                                 />
                     <p:inputText id="lokalPole" value="#{KlView.selected.lokal}"  style="width: 200px"
                                  onblur="wykresllokal_wykazklientow_dialog('formnkfaktura:lokalPole');"
                                  />
                     <p:autoComplete id="krajPole" value="#{KlView.selected.krajnazwa}" completeMethod="#{panstwa.complete}"
-                                    var="p" itemLabel="#{p}" itemValue="#{p}" required="true" requiredMessage="Wybierz nazwę kraju"
+                                    var="p" itemLabel="#{p}" itemValue="#{p}"
                                     minQueryLength="1" maxResults="10" maxlength="25"  forceSelection="false" 
                                     effect="clip" autocomplete="true" queryDelay="100" 
                                     style="width: 200px" >
-                        <p:ajax event="itemSelect" partialSubmit="true" global="false"  oncomplete="$('.uibuttonmui').show()"/>
+                        <p:ajax event="itemSelect" partialSubmit="true" global="false" />
                         <p:ajax event="query" global="false"/>
                     </p:autoComplete>
                     <p:inputText id="emailPole" value="#{KlView.selected.email}" style="width: 200px" >
