--- a/npkpir_23/web/admin/sub/tablica.xhtml
+++ b/npkpir_23/web/admin/sub/tablica.xhtml
@@ -18,7 +18,7 @@
                 <h:outputText value="Wykaz użytkowników" />  
             </f:facet>
             <p:column selectionMode="single" styleClass="checkwiersza" width="30" style="text-align: center;"/>
-            <p:column filterBy="#{wpis.id}" filterMatchMode="contains" sortBy="#{wpis.id}" >  
+            <p:column sortBy="#{wpis.id}"  width="30" style="text-align: center;">  
                 <f:facet name="header">  
                     <h:outputText value="" />  
                 </f:facet> 
