--- a/kadry/src/main/webapp/umowa/sub/dane_skladnikwynagrodzenia.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane_skladnikwynagrodzenia.xhtml
@@ -61,7 +61,7 @@
                                                       rendered="#{itemskladnikwyn.rodzajwynagrodzenia.opispelny eq 'dodaj nowy składnik' and itemskladnikwyn.id eq null}" style="color: green;"/>
                                     </f:facet>
                                     <f:facet name="input">
-                                         <p:selectOneMenu id="nazwa" value="#{itemskladnikwyn.rodzajwynagrodzenia}" converter="#{rodzajwynagrodzeniaConverter}" filter="true" required="true">
+                                         <p:selectOneMenu id="nazwa" value="#{itemskladnikwyn.rodzajwynagrodzenia}" converter="#{rodzajwynagrodzeniaConverter}" filter="true" >
                                             <f:selectItem itemLabel="wybierz" noSelectionOption="true" />
                                             <f:selectItems value="#{skladnikWynagrodzeniaView.listarodzajwynagrodzenia}"
                                                            var="rodzajwynItem"
@@ -77,7 +77,7 @@
                                     <h:outputText value="godz./mies."/>
                                 </f:facet>
                                 <h:outputText value="godz." rendered="#{itemskladnikwyn.rodzajwynagrodzenia.godzinowe0miesieczne1 eq false}"  style="color: #{itemskladnikwyn.rodzajwynagrodzenia.tylkosuperplace eq true?'grey':'initial'};"/>
-                                <h:outputText value="miesięczne" rendered="#{itemskladnikwyn.rodzajwynagrodzenia.godzinowe0miesieczne1 eq true}"  style="color: #{itemskladnikwyn.rodzajwynagrodzenia.tylkosuperplace eq true?'grey':'initial'};"/>
+                                <h:outputText value="mies." rendered="#{itemskladnikwyn.rodzajwynagrodzenia.godzinowe0miesieczne1 eq true}"  style="color: #{itemskladnikwyn.rodzajwynagrodzenia.tylkosuperplace eq true?'grey':'initial'};"/>
                             </p:column>
                             <p:column style="text-align: center;" width="40">
                                 <f:facet name="header">
@@ -96,7 +96,7 @@
                                 <f:facet name="header">
                                     <h:outputText value="stala0 zmienna1"/>
                                 </f:facet>
-                                <h:outputText value="zmienna" rendered="#{itemskladnikwyn.rodzajwynagrodzenia.stale0zmienne1 eq true}"  style="color: #{itemskladnikwyn.rodzajwynagrodzenia.tylkosuperplace eq true or itemskladnikwyn.historyczny eq true?'grey':'initial'};"/>
+                                <h:outputText value="zmienna" rendered="#{itemskladnikwyn.rodzajwynagrodzenia.stale0zmienne1 eq true}"  style="color: #{itemskladnikwyn.rodzajwynagrodzenia.tylkosuperplace eq true or itemskladnikwyn.historyczny eq true?'grey':'green'};"/>
                                 <h:outputText value="stała" rendered="#{itemskladnikwyn.rodzajwynagrodzenia.stale0zmienne1 eq false}"  style="color: #{itemskladnikwyn.rodzajwynagrodzenia.tylkosuperplace eq true or itemskladnikwyn.historyczny eq true?'grey':'initial'};"/>
                             </p:column>
                              <p:column style="text-align: center;" width="40">
