--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_zapisywdokumentach.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_zapisywdokumentach.xhtml
@@ -45,9 +45,9 @@
                          rowKey="#{loop.idwiersza}" editable="true" selection="#{dokfkView.wierszezestawienie}" sortBy="#{loop.dokfk.datadokumentu}"
                          rowsPerPageTemplate="100,200,300,400, 1000" paginatorPosition="top" paginator="#{wierszeView.wiersze.size() gt 100 ? 'true':'false'}" rows="100"
                          >
-                <p:ajax event="toggleSelect" global="false" partialSubmit="true"/>
-                <p:ajax event="rowSelectCheckbox" global="false"  partialSubmit="true" listener="#{dokfkView.znajdzDokumentOznaczWierszDoPodswietlenia()}" update=":formwpisdokument, :zestawieniezapisownakontachpola"/>
-                <p:ajax event="rowUnselectCheckbox" global="false"  partialSubmit="true"/>
+                <p:ajax event="toggleSelect" global="false" />
+                <p:ajax event="rowSelectCheckbox" global="false" listener="#{dokfkView.znajdzDokumentOznaczWierszDoPodswietlenia()}" update=":formwpisdokument, :zestawieniezapisownakontachpola"/>
+                <p:ajax event="rowUnselectCheckbox" global="false"  />
                 <p:ajax event="filter" global="false" listener="#{wierszeView.sumujwiersze()}" update="zestawieniezapisownakontach_footer"/>
                 <f:facet name="header">  
                     <h:outputText value="Zestawienie wierszy w dokumentach " />  
