eksport planu kont do importu

--- a/npkpir_23/web/ksiegowaFK/sub/menu/menuslowniki.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/menu/menuslowniki.xhtml
@@ -22,6 +22,7 @@
                     <p:menuitem value="dołączanie klientów do kont" onclick="PF('dialog_kliencifk_dolaczanie').show();"></p:menuitem>
                     <p:menuitem value="wykaz dołączonych do kont" onclick="PF('dialog_kliencifk_lista').show();"></p:menuitem>
                     <p:menuitem value="wykaz wszystkich kontrahentów" onclick="PF('dialog_kontrahenci_lista').show();"></p:menuitem>
+                    <p:menuitem value="import klientów z xls" onclick="PF('dialog_kontrahenci_import').show();"></p:menuitem>
                 </p:menu>  
             </h:form>
         </p:tab>  
