--- a/npkpir_23/web/ksiegowaFK/ksiegowaFKKartoteki.xhtml
+++ b/npkpir_23/web/ksiegowaFK/ksiegowaFKKartoteki.xhtml
@@ -32,6 +32,7 @@
                     <ui:include src="sub/dialog/dialog_kliencifk_dolaczanie.xhtml"/>
                     <ui:include src="sub/dialog/dialog_kliencifk_lista.xhtml"/>
                     <ui:include src="sub/dialog/dialog_kontrahenci_lista.xhtml"/>
+                    <ui:include src="sub/dialog/dialog_kontrahenci_import.xhtml"/>
                     <ui:include src="sub/dialog/dialog_miejscakosztow_dolaczanie.xhtml"/>
                     <ui:include src="sub/dialog/dialog_miejscaprzychodow_dolaczanie.xhtml"/>
                     <ui:include src="sub/dialog/dialog_stowarzyszenie_wykaz_czlonkow.xhtml"/>
