--- a/npkpir_23/web/ksiegowaFK/sub/podstrony/plankont/plankontimport.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/podstrony/plankont/plankontimport.xhtml
@@ -19,6 +19,7 @@
                                       style="height: 90px;"> 
                         </p:fileUpload>
                         <p:growl life="3600"  id="messages2" showDetail="false"/>
+                        <p:commandButton id="xlsbutton" value="pobierz plan kont" actionListener="#{planKontView.zachowajPlanKontwXLS()}" style=" margin-left: 5px;" global="true" ajax="false"/>
                     </p:panelGrid>
                 <p:messages  id="mes"/>
             </p:panelGrid>
